fix names to prevent confusion

--- a/README
+++ b/README
@@ -2,10 +2,10 @@
 
 ## Description
 - [Git Subtree](https://gist.github.com/SKempin/b7857a6ff6bddb05717cc17a44091202) is used to add a repo as a subdirectory to another repo. 
-- This repo serves as a single source of truth for workflows through iac-repos.
-- New changes in this repo can be pulled via the subtree in the other repos.
+- test-subtree-workflows repo serves as a single source of truth for workflows through iac-repos.
+- New changes in the repo can be pulled via the subtree in the other repos.
 
-## Adding this repo as a subtree in another repo
+## Adding test-subtree-workflows repo as a subtree in another repo
 - syntax
     ```
         git subtree add --prefix <dir name> <subtree repo ssh link> <branchname>
@@ -17,7 +17,7 @@
 - [optional] Insert any changes to the subtree.
 - Push the changes to the remote repo.
 
-## Pulling latest changes of this repo from subtree
+## Pulling latest changes of test-subtree-workflows repo from subtree
 - to-run
     ```
         git subtree pull --prefix .github git@github.com:ricky-deriv/test-subtree-workflows.git main
